<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activitystart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_start">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal"
           android:background="@drawable/ic_wave"
           android:layout_weight="60">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="10dp"
               android:layout_marginTop="20dp"
               android:fontFamily="cursive"
               android:text="@string/title"
               android:textColor="#FFFFFF"
               android:textSize="20pt"
               android:textStyle="italic" />

           <ImageView
               android:layout_width="100dp"
               android:layout_height="100dp"
               app:srcCompat="@drawable/ic_bashlan_white"
               android:layout_marginTop="20dp"
               android:layout_marginStart="140dp"/>

       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="40"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/start_EDT_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_mail"
                app:startIconTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                app:boxStrokeColor="@color/colorPrimary"
                android:hint="@string/email"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"

                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/start_EDT_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_BTN_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:cornerRadius="15dp"/>

            <TextView
                android:id="@+id/start_LBL_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:clickable="true"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="100dp">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/start_BTN_signGoogle"
                    android:layout_width="200dp"
                    android:layout_height="35dp"/>

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/start_BTN_signFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/start_BTN_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_an_account"
                    app:cornerRadius="15dp"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="70dp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>