<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/profile_LAY_top"
            android:layout_width="match_parent"
            android:layout_height="321dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_IMG_personne"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_profile" />

            <TextView
                android:id="@+id/profile_LBL_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nathan Amiel"
                android:textColor="#FFFF"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_LBL_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="nathanamiel5@gmail.com"
                android:textColor="#FFFF"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/profile_LAY_top"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/profile_EDT_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/weight">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/profile_EDT_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/height">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profile_BTN_imc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_your_imc"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/profile_LBL_imc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_imc_is"
                android:textStyle="bold"
                android:layout_marginStart="130dp"
                android:layout_marginTop="10dp" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>